--- a/Code/Project/Web Tuyen Sinh/home.html
+++ b/Code/Project/Web Tuyen Sinh/home.html
@@ -87,9 +87,12 @@
 
         <div class="admission-slide-show">
 
-            <h1>TUYỂN SINH</h1>
+            <div class="content-title">
 
-            <h3>Các ngành đào tạo</h3>
+                <h1>TUYỂN SINH</h1>
+                <h3>Các ngành tuyển sinh</h3>
+                
+            </div>
 
             <button id="prev-slide" class="slide-btn fas fa-angle-left"></button>
 
@@ -665,6 +668,52 @@
                 </div>
             </div> -->
 
+
+        </div>
+
+        <div class="admission-content">
+            <div class="content-title">
+
+                <h1>THÔNG TIN</h1>
+                <h3>Thông tin tuyển sinh 2025</h3>
+
+            </div>
+            <div class="info25">
+
+                <div class="info25-box">
+                    <div>
+                        <img src="" alt="" class="info25-img">
+                    </div>
+                    <div class="info25-content">
+                        <i class="fa-regular fa-calendar"><b>12/11/2024</b></i>
+                        <h2>CHÍNH SÁCH HỖ TRỢ HỌC PHÍ</h2>
+                        <a href="#">Xem chi tiết</a>
+                    </div>
+                </div>
+
+                <div class="info25-box">
+                    <div>
+                        <img src="" alt="" class="info25-img">
+                    </div>
+                    <div class="info25-content">
+                        <i class="fa-regular fa-calendar"><b>12/11/2024</b></i>
+                        <h2>CHƯƠNG TRÌNH HỌC BỔNG</h2>
+                        <a href="#">Xem chi tiết</a>
+                    </div>
+                </div>
+
+                <div class="info25-box">
+                    <div>
+                        <img src="" alt="" class="info25-img">
+                    </div>
+                    <div class="info25-content">
+                        <i class="fa-regular fa-calendar"><b>12/11/2024</b></i>
+                        <h2>CHƯƠNG TRÌNH SONG BẰNG</h2>
+                        <a href="#">Xem chi tiết</a>
+                    </div>
+
+                </div>     
+            </div>
 
         </div>
 
