--- a/Code/Project/Web Tuyen Sinh/home.html
+++ b/Code/Project/Web Tuyen Sinh/home.html
@@ -101,7 +101,7 @@
                 <div class="slide-show">
 
                     <div class="admission">
-                        <div class=""></div>
+                        <div class="fa-solid fa-person-breastfeeding icon-display"></div>
                         <h3>
                             <b>Giáo dục Mầm non - SP Tiếng Anh</b>
                         </h3>
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="admission">
-                        <div class=""></div>
+                        <div class="fa-solid fa-person-breastfeeding icon-display"></div>
                         <h3>
                             <b>Giáo dục Mầm non</b>
                         </h3>
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="admission">
-                        <div class=""></div>
+                        <div class="fa-solid fa-children icon-display"></div>
                         <h3>
                             <b>Giáo dục Tiểu học - SP Tiếng Anh</b>
                         </h3>
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                     <div class="admission">
-                        <div class=""></div>
+                        <div class="fa-solid fa-children icon-display"></div>
                         <h3>
                             <b>Giáo dục Tiểu học</b>
                         </h3>
@@ -149,7 +149,7 @@
                         </div>
                     </div>
                     <div class="admission">
-                        <div class=""></div>
+                        <div class="fa-solid fa-puzzle-piece icon-display"></div>
                         <h3>
                             <b>Giáo dục đặc biệt</b>
                         </h3>
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                     <div class="admission">
-                        <div class=""></div>
+                        <div class="fa-solid fa-person icon-display"></div>
                         <h3>
                             <b>Giáo dục công dân</b>
                         </h3>
@@ -713,6 +713,53 @@
                     </div>
 
                 </div>     
+            </div>
+
+        </div>
+
+        <div class="medthod">
+            <div class="content-title">
+
+                <h1>HỆ ĐẠI HỌC CHÍNH QUY</h1>
+                <h3>Phương thức xét tuyển</h3>
+
+            </div>
+
+            <div class="admission-method">
+                <div class="method-menu">
+                    <div class="method-title"><i class="fa-sharp fa-solid fa-feather"></i><b>&nbsp; Phương thức 1</b></div>
+                    <div class="method-title"><i class="fa-sharp fa-solid fa-feather"></i><b>&nbsp; Phương thức 2</b></div>
+                    <div class="method-title"><i class="fa-sharp fa-solid fa-feather"></i><b>&nbsp; Phương thức 3</b></div>
+                    <div class="method-title"><i class="fa-sharp fa-solid fa-feather"></i><b>&nbsp; Phương thức 4</b></div>
+                    <div class="method-title"><i class="fa-sharp fa-solid fa-feather"></i><b>&nbsp; Phương thức 5</b></div>
+                </div>
+
+                <div class="method-content">
+                    <div>
+                        <img src="" alt="" class="method-img">
+                    </div>
+                    <div class="method-review">
+                        <h2><b>Phương thức 1 - Sử dụng kết quả thi tốt nghiệp THPT 2025</b></h2>
+                        <div>
+                            <i class="fa-regular fa-bookmark"></i>
+                            <span>
+                                Thí sinh đăng ký nguyện vọng trực tuyến trên Hệ thống hỗ trợ tuyển sinh chung của Bộ GDĐT. Có thể đăng ký xét tuyển vào nhiều ngành, không giới hạn số nguyện vọng và đóng lệ phí theo quy định.
+                            </span>
+                        </div>
+                        <div>
+                            <i class="fa-regular fa-bookmark"></i>
+                            <span>
+                                Xét tuyển theo từng ngành, từ cao xuống thấp dựa vào tổng điểm 3 môn thi, bao gồm môn thi chính nhân hệ số 2 (nếu có) và điểm ưu tiên (nếu có), cho đến khi đủ chỉ tiêu.
+                            </span>
+                        </div>
+                        <div><i class="fa-regular fa-bookmark"></i>
+                            <span>
+                                Các ngành như Giáo dục mầm non, Giáo dục mầm non - Sư phạm Tiếng Anh, Giáo dục thể chất, Sư phạm Âm nhạc, Sư phạm Mỹ thuật yêu cầu thí sinh tham gia Kỳ thi năng khiếu do Trường ĐHSP Hà Nội tổ chức và kết hợp kết quả thi năng khiếu với kết quả thi tốt nghiệp THPT để xét tuyển
+                            </span>
+                        </div>
+                        
+                    </div>
+                </div>
             </div>
 
         </div>
